# qntools

./: .gitignore  install.bat  uninstall.bat
config/modules/: alUSD.mod  mayaUSD.mod  pxrUSD.mod
icon/: souce.qrc
lib/: qndll.lib  qnusdtool.lib
libs/Maya/templete/: mayaUSD.mod
libs/Python/qn/: env.py  log.py  qnassettool.py  qnusdtool.py
scripts/cgteamwork/: addrigmetadata.py  animationcheck.py  maya_rigmetadata.py  modelcheck.py  modelcheckmaya.py  test.py  test1.py  usdanimationrename.py  usdanimslayer.py  usdcfxmeshrename.py  usdcfxmeshslayer.py
scripts/desktop/: newasset.py  newscene.py  newscene_old.py  submitasset.py  submitasset_exe.py  submitasset_ui.py  submitcfx_exe.py  submitlight_exe.py  submitlight_ui.py  submitscene.py  submitshot_exe.py  submitshot_ui.py  test.py
scripts/libs/qn/: cgtwtool.py  env.py  qnassettool.py  qnui.py  qnusdtool.py
scripts/maya/: animcapture.py  assetloader.py  assetloader_ui.py  initconfig.py  maya_checkmod.py  maya_rigmetadata.py  usd_export_asset.py  usdanimexport.py  usdanimexport_ui.py  usdcfxexport.py  usdexport.py  usdexport_ui.py  usdtexexport.py  userSetup.py
scripts/maya/qn/: checkUtils.py
scripts/maya/qn_maya/: cleanupUtils.py  envUtils.py  mayaAssetUtils.py  mayaUtils.py
source/cplusplus/ArnoldProject/: ArnoldProject.sln
source/cplusplus/ArnoldProject/ArnoldLightLinkOp/: ArnoldLightLinkOp.vcxproj  main.cpp
source/cplusplus/ArnoldProject/ScatterSphere/: ScatterSphere.vcxproj  main.cpp
source/cplusplus/ArnoldProject/Test/: Test.vcxproj  main.cpp  test.ass
source/cplusplus/QNTOOLS_CMAKE/: CMakeLists.txt  CMakePresets.json
source/cplusplus/QNTOOLS_CMAKE/PostAssetUI/: CMakeLists.txt  EnvUtils.cpp  EnvUtils.h  assetprocess.hpp  main.cpp  singletask.cpp  singletask.h  widget.aps  widget.cpp  widget.h  widget.ui  work.cpp  work.h
source/cplusplus/QNTOOLS_CMAKE/QNTOOLS_CMAKE/: CMakeLists.txt  QNTOOLS_CMAKE.cpp  QNTOOLS_CMAKE.h
source/cplusplus/QNTOOLS_CMAKE/Test/: CMakeLists.txt  main.cpp  script.py
source/cplusplus/QNTOOLS_CMAKE/UpDataAssetUI/: CMakeLists.txt  main.cpp  tool.hpp  widget.cpp  widget.h  widget.ui
source/cplusplus/QNTOOLS_CMAKE/qnusdtool/: Asset.cpp  Asset.h  CMakeLists.txt  Modelcheck.cpp  Modelcheck.h  Shot.cpp  Shot.h  Submit.cpp  Submit.h  Utils.cpp  Utils.h  importlib.h  stagetool.h
source/cplusplus/QNTOOLS_CMAKE/qnusdtool_py/: CMakeLists.txt  main.cpp
source/cplusplus/project/: project.sln
source/cplusplus/project/ModelCheck/: ModelCheck.vcxproj  main.cpp
source/cplusplus/project/RemakeAssetui/: CMakeLists.txt  EnvUtils.cpp  EnvUtils.h  main.cpp  style.css  widget.cpp  widget.h  widget.ui
source/cplusplus/project/project/: hello.usda  main.cpp  project.vcxproj
source/cplusplus/project/qnusdtool/: Asset.cpp  Asset.h  Modelcheck.cpp  Submit.cpp  Utils.cpp  Utils.h  importlib.h  main.cpp  modcheck.h  qnusdtool.vcxproj  qnusdtool.vcxproj.filters  stagetool.h
source/cplusplus/project/test/: assetprocess.cpp  qndll.cpp  qndll.h  test.vcxproj  test.vcxproj.filters
source/csharp/project/: project.sln
source/csharp/project/BackServer/: BackServer.csproj  MayaTask.cs  Program.cs  ServerCmd.cs  TaskServer.cs  Worker.cs
source/csharp/project/BackServer/Properties/: launchSettings.json
source/csharp/project/BackServer/Properties/PublishProfiles/: FolderProfile.pubxml
source/csharp/project/MayaTaskManager/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MayaTask.cs  ServerCmd.cs  TaskServer.cs
source/csharp/project/MayaTaskManager/Properties/: Resources.Designer.cs
source/csharp/project/PostProcessAsset/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PostProcessAsset.csproj  qnusdtool.cs
source/csharp/project/PostProcessAsset/Properties/: launchSettings.json
source/csharp/project/RunMayaPy/: MayaTask.cs  Program.cs  ServerCmd.cs  TaskServer.cs
source/csharp/project/RunMayaPy/Properties/PublishProfiles/: FolderProfile.pubxml
source/csharp/project/install/: DataTemplete.cs  ExplorerMenuConfig.cs  InstallMayaUSD.cs  Program.cs  QNBackServer.cs  UsdFormatConfig.cs  env.cs  install.csproj  menuconfig.json
source/csharp/project/install/Properties/PublishProfiles/: FolderProfile.pubxml
source/csharp/project/updataasset/: AssetData.cs  Program.cs  config.json  updataasset.csproj
source/csharp/project/updatescene/: AssetData.cs  Program.cs  config.json  updatescene.csproj
source/qtdesign/: Arnold渲染.ui  Maya资产.ui  maya绑定.ui  上传动画.ui  上传场景.ui  上传资产.ui  动画导出.ui  新的USD场景2.ui  新的USD资产.ui  生成渲染文件.ui  资产加载 - untitled.ui
